# GangDan

./: .gitignore  .test-kb.progress.json  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  README_CN.md  _t1.py  _t1_out.txt  _t4.py  _t4_out.txt  _t5.py  _t5_out.txt  _test2.py  _test2_out.txt  _test3.py  _test3_err.txt  _test3_out.txt  _test_full.py  _test_learning_api.py  _test_out.txt  build.bat  current.txt  errors  publish.py  pyproject.toml  requirements.txt  test_package.py  test_quick.py  upload_pypi.bat  upload_pypi.sh  wechat-20260519-caj.md
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
gangdan/: __init__.py  __main__.py  api.py  app.py  cli.py  cli_app.py  export_routes.py  graph_routes.py  kb_routes.py  learning_routes.py  preprint_routes.py  research_routes.py  tools.py
gangdan-refined/: GangDan-Refined-Documentation.docx  GangDan-Refined-文档.docx  README.md  README_zh.md  generate_docs.py  pyproject.toml
gangdan-refined/data/: gangdan_refined_config.json
gangdan-refined/gangdan_refined/: __init__.py  __main__.py  api.py  cli.py  tools.py
gangdan-refined/gangdan_refined/agents/: __init__.py  ask_agent.py  base.py  chat_agent.py  config_agent.py  convert_agent.py  docs_agent.py  embed_agent.py  kb_agent.py  learn_agent.py  models_agent.py  pipeline.py  preprint_agent.py  protocol.py  research_agent.py  search_agent.py  sub_agent.py  summarize_agent.py  translate_agent.py
gangdan-refined/gangdan_refined/cli_app/: __init__.py  repl.py
gangdan-refined/gangdan_refined/cli_app/commands/: __init__.py  chat.py  config.py  kb.py
gangdan-refined/gangdan_refined/commands/: __init__.py  ask.py  chat.py  common.py  config.py  convert.py  docs.py  embed.py  kb.py  models.py  search.py  summarize.py  translate.py  web.py
gangdan-refined/gangdan_refined/core/: __init__.py  adaptive_search.py  config.py  constants.py  conversation.py  cron_service.py  doc_manager.py  errors.py  i18n.py  image_handler.py  llm_client.py  port_utils.py  setup_wizard.py  vector_db.py  web_searcher.py
gangdan-refined/gangdan_refined/core/locales/: translations.json
gangdan-refined/gangdan_refined/document/: __init__.py  doc_manager.py  pdf_converter.py  pdf_downloader.py  pdf_renamer.py
gangdan-refined/gangdan_refined/document/preprint/: __init__.py  batch.py  categories.py  converter.py  fetcher.py  kb_manager.py  scheduler.py
gangdan-refined/gangdan_refined/learning/: __init__.py  exam.py  guided.py  lecture.py  prompts.py  question_gen.py  rag_helper.py  research.py  utils.py  validator.py
gangdan-refined/gangdan_refined/llm/: __init__.py  base.py  factory.py  models.py  ollama.py  openai_compat.py
gangdan-refined/gangdan_refined/research/: __init__.py  export.py  pipeline.py
gangdan-refined/gangdan_refined/search/: __init__.py  adaptive_search.py  query_expander.py  research_searcher.py  web_fetcher.py  web_searcher.py
gangdan-refined/gangdan_refined/storage/: __init__.py  compactor.py  conversation.py  doc_manager.py  hybrid_search.py  image_handler.py  kb_manager.py  memory_store.py  vector_db.py
gangdan-refined/gangdan_refined/web/: __init__.py  app.py
gangdan-refined/gangdan_refined/web/routes/: __init__.py  api.py  chat.py  cron.py  docs.py  export.py  graph.py  kb.py  learning.py  memory.py  preprint.py  research.py  settings.py
gangdan-refined/gangdan_refined/web/static/css/: learning.css
gangdan-refined/gangdan_refined/web/static/js/: chat.js  exam.js  gallery.js  graph.js  guide.js  kb-analytics.js  lecture.js  markdown.js  memory.js  paper-search.js  preprint-ui.js  question.js  research.js  settings-providers.js  settings.js  utils.js
gangdan-refined/gangdan_refined/web/templates/: guide.html  index.html  setup.html
gangdan-refined/tests/: conftest.py  test_agent_base_pipeline.py  test_agent_functional.py  test_agent_protocol.py  test_agent_whitebox.py  test_agents.py  test_architecture.py  test_cli_commands.py  test_cli_integration.py  test_config.py  test_edge_cases.py  test_errors.py  test_llm.py  test_pipeline_e2e.py  test_setup_wizard.py  test_web_integration.py  test_web_routes.py
gangdan/core/: __init__.py  adaptive_search.py  arxiv_fetcher.py  chroma_manager.py  config.py  constants.py  conversation.py  doc_manager.py  errors.py  export_manager.py  fts.py  hybrid_search.py  i18n.py  image_handler.py  kb_analytics.py  kb_manager.py  knowledge_graph.py  llm_client.py  memory_store.py  ollama_client.py  openai_client.py  pdf_converter.py  pdf_downloader.py  preprint_batch.py  s2_cache.py  (+11 more)
images/: gangdan_help.txt  综述  2026-05-02 23-07-15.webm
removed/: __init__.py  _t1_out.txt  _test3_out.txt  config.py  kb_versioning.py  pdf_converter.py  pdf_downloader.py  pdf_renamer.py  research_models.py  research_searcher.py  test_core_research.py  test_dblp_fetcher.py  test_openalex_fetcher.py
scripts/: build_vector_calc_kb.py
test_screenshots/: TEST_REPORT.md  _embed_test.py  _kb_test.py  api_tests.py  capture.py  capture_edge.py  capture_en.py  capture_final.py  capture_gen.py  capture_gen2.py  capture_pw.py  capture_static_final.py  debug_404.py  debug_capture.py  debug_resp.py  full_test.py  full_test_v2.py  gen_tests.py  gen_tests_v2.py  quick_verify.py  test_results.json
tests/: conftest.py  test_adaptive_search.py  test_arxiv_fulltext.py  test_cli_commands.py  test_cli_repl.py  test_core_chroma_manager.py  test_core_config.py  test_core_conversation.py  test_core_doc_manager.py  test_core_image_handler.py  test_core_llm_client.py  test_core_ollama_client.py  test_core_port_utils.py  test_core_research.py  test_core_web_searcher.py  test_kb_analytics.py  test_kb_analytics_api.py  test_kb_doc_selection.py  test_kb_versioning.py  test_learning_research.py  test_learning_routes.py  test_preprint_categories.py  test_preprint_converter.py  test_preprint_fetcher.py  test_preprint_kb_manager.py  test_preprint_routes.py  test_preprint_scheduler.py  test_research_pipeline.py  test_s2_cache.py  test_s2_enhanced.py  test_unified_api.py  test_web_searcher_engines.py
tmp/: _t4.py  _t5.py  _test2.py  _test_learning_api.py
(+36 files in other folders)
