[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gangdan"
dynamic = ["version"]
description = "Offline Development Assistant powered by Ollama and ChromaDB"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "GangDan Contributors" },
]
keywords = ["ollama", "chromadb", "rag", "offline", "assistant", "flask", "cli", "repl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "requests>=2.31",
    "chromadb>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.scripts]
gangdan = "gangdan.cli:main"

[project.urls]
Homepage = "https://github.com/cycleuser/GangDan"
Repository = "https://github.com/cycleuser/GangDan"
Issues = "https://github.com/cycleuser/GangDan/issues"

[tool.setuptools.dynamic]
version = { attr = "gangdan.__version__" }

[tool.setuptools.packages.find]
include = ["gangdan*"]

[tool.setuptools.package-data]
gangdan = [
    "templates/**/*",
    "static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
