[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gangdan"
dynamic = ["version"]
description = "Offline Development Assistant powered by Ollama and ChromaDB"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "GangDan Contributors" },
]
keywords = ["ollama", "chromadb", "rag", "offline", "assistant", "flask", "cli", "repl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "requests>=2.31",
    "chromadb>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "numpy>=1.24",
    "caj2pdf-restructured>=0.1.0a1",
    "PyMuPDF>=1.24.0",
    "PyMuPDF4LLM>=0.0.17",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
docling = [
    "docling>=2.0.0",
]
marker = [
    "nuoyi>=0.4.0",
]
ocr = [
    "pypdfium2>=4.0",
    "pytesseract>=0.3.0",
]

[project.scripts]
gangdan = "gangdan.cli:main"

[project.urls]
Homepage = "https://github.com/cycleuser/GangDan"
Repository = "https://github.com/cycleuser/GangDan"
Issues = "https://github.com/cycleuser/GangDan/issues"

[tool.setuptools.dynamic]
version = { attr = "gangdan.__version__" }

[tool.setuptools.packages.find]
include = ["gangdan*"]

[tool.setuptools.package-data]
gangdan = [
    "templates/**/*",
    "static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
