[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gangdan-refined"
dynamic = ["version"]
description = "Modular LLM-powered knowledge management and teaching assistant with offline support"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "GangDan Contributors" },
]
keywords = ["ollama", "chromadb", "rag", "offline", "assistant", "flask", "cli", "repl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "requests>=2.31",
    "chromadb>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
pdf = [
    "pymupdf>=1.23",
    "pypdf>=3.0",
    "docling>=2.0",
    "marker>=1.0",
]
search = [
    "duckduckgo-search>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]
web = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "psutil>=5.9",
]
analytics = [
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "plotly>=5.15",
]
all = [
    "gangdan-refined[pdf,search,web,analytics]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
gangdan-refined = "gangdan_refined.cli:main"
gd-chat = "gangdan_refined.commands.chat:main"
gd-search = "gangdan_refined.commands.search:main"
gd-kb = "gangdan_refined.commands.kb:main"
gd-docs = "gangdan_refined.commands.docs:main"
gd-config = "gangdan_refined.commands.config:main"
gd-translate = "gangdan_refined.commands.translate:main"
gd-summarize = "gangdan_refined.commands.summarize:main"
gd-ask = "gangdan_refined.commands.ask:main"
gd-embed = "gangdan_refined.commands.embed:main"
gd-models = "gangdan_refined.commands.models:main"
gd-convert = "gangdan_refined.commands.convert:main"
gd-web = "gangdan_refined.commands.web:main"

[project.urls]
Homepage = "https://github.com/cycleuser/GangDan"
Repository = "https://github.com/cycleuser/GangDan"
Issues = "https://github.com/cycleuser/GangDan/issues"

[tool.setuptools.dynamic]
version = { attr = "gangdan_refined.__version__" }

[tool.setuptools.packages.find]
include = ["gangdan_refined*"]

[tool.setuptools.package-data]
gangdan_refined = [
    "web/templates/**/*",
    "web/static/**/*",
    "core/locales/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]